<resources>
    <string name="app_name">RealEstateManager</string>

    <!-- Main activity -->
    <string name="connectivity_rational">Real Estate Manager needs to access the following permissions in order to provide the best experience</string>
    <string name="not_connected_to_internet">Internet connection status: offline</string>
    <string name="connected_to_internet">Internet connection status: online</string>

    <!-- Fragment propertyList -->
    <string name="show_less">Show less</string>
    <string name="show_more">Show more</string>

    <!-- nav menu items -->
    <string name="mortgage_calculator">Mortgage calculator</string>
    <string name="my_account">My account</string>

    <!-- nav header -->
    <string name="photo_by_andre_benz_unsplash">Photo by Andre Benz Unsplash</string>
    <string name="Open_drawer_menu">Open drawer menu</string>
    <string name="Close_drawer_menu">Close drawer menu</string>

    <!-- Mortgage calculator fragment -->
    <string name="currency_sign">Currency sign</string>
    <string name="price">Property price</string>
    <string name="years">Mortgage length</string>
    <string name="rate">Mortgage rate</string>
    <string name="down_payment">Down payment</string>
    <string name="minus_vector_image_legend">Minus vector image legend</string>
    <string name="add_vector_image_legend">Add vector image legend</string>
    <string name="slider_to_modify_the_mortgage_rate_from_2_to_6">Slider to modify the mortgage rate from 2 to 6</string>
    <string name="slider_to_modify_the_length_of_the_mortgage_from_5_to_30_years">Slider to modify the length of the mortgage from 5 to 30 years</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="total_investment_cost">The total investment cost is $%1d / €%2d</string>
    <string name="mortgage_length_in_years">"%1d years"</string>

    <!-- My account fragment -->
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="delete_account_forever">Delete account forever</string>
    <string name="you_are_connected">You are connected</string>
    <string name="you_are_disconnected">you are disconnected</string>
    <string name="connection_error">Connection error: %1s</string>
    <string name="agent_avatar">Agent avatar</string>
    <string name="update_account">Update account</string>
    <string name="update_button_warning">Feature is not ready yet</string>
    <string name="unable_to_proceed">Unable to proceed, you are disconnected</string>
    <string name="alert_delete_account_message">Do you really want to delete your account?</string>
    <string name="alert_positive_message">Delete my account</string>
    <string name="alert_negative_message">Cancel</string>
    <string name="alert_title">Delete account</string>

    <!-- Create Edit fragment -->
    <string name="property_type">Type</string>
    <string name="property_price">Price in dollar</string>
    <string name="property_surface">Surface m²</string>
    <string name="property_nb_rooms">Nb rooms</string>
    <string name="property_number_bedrooms">Nb bedrooms</string>
    <string name="property_number_bathrooms">Nb bathrooms</string>
    <string name="property_description">Description</string>
    <string name="property_neighbourhood">Neighbourhood</string>
    <string name="property_on_market_since">On market since</string>
    <string name="property_off_market_since">Off market since</string>
    <string name="property_on_sale">On sale</string>
    <string name="property_sold">Sold</string>
    <string name="add_photo">Add Photo</string>
    <string name="save">Save</string>
    <string name="property_list_of_property_type">list of property type</string>
    <string name="address">Address</string>
    <string name="autocomplete_hint">Type an address</string>
    <string name="optional_helper_text">Optional</string>
    <string name="agent_managing_property">Agent managing property</string>
    <string name="property_city">City</string>
    <string name="optional_field">optional field</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="fill_all_field">You need to fill all fields not marked with optional</string>

    <!-- Photo item-->
    <string name="short_description">Short description</string>
    <string name="internal_photo">Internal photo</string>
    <string name="add">Add</string>
    <string name="notification_title">There is a new property</string>

    <!-- Search -->
    <string name="schools">Schools</string>
    <string name="shops">Shops</string>
    <string name="parks">Parks</string>
    <string name="_0">0</string>
    <string name="search">Search</string>
    <string name="sold_in_the_last_3_month">Sold in the last 3 month</string>
    <string name="added_1_week"><![CDATA[Added < 1 week]]></string>
    <string name="starting_price">Starting price</string>
    <string name="price_limit">Price limit</string>
    <string name="size_up_to">Size up to</string>
    <string name="size_from">Size from</string>
    <string name="more_3_pictures">More 3 pictures</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_results">No results</string>

</resources>