<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.CreateModifyFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/autocomplete_fragment"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILPropertyAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/address"
                android:padding="4dp"
                android:textColor="@color/primaryDarkColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:boxStrokeColor="@color/primaryColor"
                tools:text="10000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETPropertyAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILPropertyNeighbourhood"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/property_neighbourhood"
                android:textColor="@color/primaryDarkColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:boxStrokeColor="@color/primaryColor"
                tools:text="10000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETPropertyNeighbourhood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILPropertyType"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/property_type"
                android:padding="4dp"
                android:textColor="@color/primaryDarkColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:boxStrokeColor="@color/primaryColor"
                tools:text="10000">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextViewType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:labelFor="@id/autoCompleteTextView"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILPropertyPrice"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/property_price"
                android:textColor="@color/primaryDarkColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:boxStrokeColor="@color/primaryColor"
                tools:text="1000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETPropertyPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILPropertySurface"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/property_surface"
                android:textColor="@color/primaryDarkColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:boxStrokeColor="@color/primaryColor"
                tools:text="10000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETPropertySurface"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILPropertyNbRooms"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/property_nb_rooms"
                android:textColor="@color/primaryDarkColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:boxStrokeColor="@color/primaryColor"
                tools:text="10000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETPropertyNbRooms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TILPropertyNbBedrooms"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/property_number_bedrooms"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:boxStrokeColor="@color/primaryColor"
                    tools:text="10000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TIETPropertyNbBedrooms"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TILPropertyNbBathRooms"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/property_number_bathrooms"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:boxStrokeColor="@color/primaryColor"
                    tools:text="10000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TIETPropertyNbBathrooms"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILPropertyDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/property_description"
                android:textColor="@color/primaryDarkColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:boxStrokeColor="@color/primaryColor"
                tools:text="10000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETPropertyDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <ToggleButton
                android:id="@+id/toggleSaleStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textOff="@string/property_on_sale"
                android:textOn="@string/property_sold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TILPropertyOnMarketSince"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/property_on_market_since"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:boxStrokeColor="@color/primaryColor"
                    tools:text="10000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TIETPropertyOnMarketSince"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="date" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TILPropertyOffMarketSince"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/property_off_market_since"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:boxStrokeColor="@color/primaryColor"
                    tools:text="10000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TIETPropertyOffMarketSince"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="date" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:scrollbars="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnAddPhoto"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/add_photo"
                app:icon="@drawable/ic_baseline_add_a_photo_24" />

            <Button
                android:id="@+id/btnSave"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/save"
                app:icon="@drawable/ic_baseline_save_24" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>